feat(animations): animate new entries

--- a/app/views/partials/feedHistory.html
+++ b/app/views/partials/feedHistory.html
@@ -11,13 +11,13 @@
         </div>
     </form>
 
-    <div class="ui selection list" ng-repeat="feed in feedHistory.feeds">
-        <div class="item"
+    <div class="ui selection list list_feed">
+        <div class="item item_feed transition" ng-repeat="feed in feedHistory.feeds"
              ng-click="feedHistory.selectFeed($index)"
              ng-class="{'active': feedHistory.selected === feed}">
 
             <div class="content">
-                {{ ::feed }} <i class="right floated close icon"></i>
+                {{ ::feed }} <i class="right floated close icon" ng-click="feedHistory.deleteFeed($index)"></i>
             </div>
         </div>
     </div>
