feat(feedViewerManager): adding model to manage feed viewer

--- a/app/views/partials/feedViewer.html
+++ b/app/views/partials/feedViewer.html
@@ -1,4 +1,4 @@
-<div class="ui segment">
+<div class="ui segment" ng-class="{'loading': feedViewerManager.isLoading}">
     <header class="ui center aligned vertical segment">
         <h1 class="ui header">URL 1</h1>
     </header>
