--- a/app/views/partials/feedHistory.html
+++ b/app/views/partials/feedHistory.html
@@ -14,6 +14,7 @@
             <input type="url" title="Search" placeholder="Add a feed URL"
                    name="add" id="addText"
                    validate-duplicates
+                   ng-keydown="$event.stopPropagation()"
                    ng-model="feedHistory.feed"/>
 
             <div class="ui icon button" ng-click="feedHistory.addFeed()">
